# ktprojstarter

./: .bazelrc  .editorconfig  .gitignore  .pre-commit-config.yaml  BUILD  MODULE.bazel  README.md  WORKSPACE  container-structure-test.yaml  create-proj.sh
bazel/: BUILD  containers.MODULE.bazel  containers.bzl  maven.bzl  maven_install.json  repin.sh  workspace_status
bazel/maven/: maven.MODULE.bazel  maven_install.json
bazel/tools/: java.bzl
proto/echo/: BUILD  echo.proto
scripts/: ktlint.sh
src/main/kotlin/io/proj/ktprojstarter/: Main.kt
src/main/kotlin/io/proj/ktprojstarter/echo/: EchoClient.kt  EchoServer.kt
src/proto/: BUILD  ktprojstarter.proto
src/test/kotlin/io/proj/ktprojstarter/: AnotherTest.kt  ExampleTest.kt
src/test/kotlin/io/proj/ktprojstarter/echo/: EchoServiceTest.kt
