module(
    name = "ktprojstarter",
    version = "0.0.1",
)

bazel_dep(name = "stardoc", version = "0.8.0")
bazel_dep(name = "platforms", version = "0.0.11")
bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "bazel_features", version = "1.30.0")
bazel_dep(name = "aspect_bazel_lib", version = "2.14.0")
bazel_dep(name = "rules_pkg", version = "1.1.0")
bazel_dep(name = "rules_java", version = "8.12.0")
bazel_dep(name = "contrib_rules_jvm", version = "0.28.0")
bazel_dep(name = "grpc-java", version = "1.71.0", repo_name = "io_grpc_grpc_java")
bazel_dep(name = "rules_proto_grpc_python", version = "5.0.1")
bazel_dep(name = "protobuf", version = "30.2", repo_name = "com_google_protobuf")
bazel_dep(name = "rules_oci", version = "2.2.3")
bazel_dep(name = "container_structure_test", version = "1.19.3")
git_override(
    module_name = "container_structure_test",
    commit = "56c7201716d770c0f820a9c19207ba2ea77c34f8",
    remote = "https://github.com/GoogleContainerTools/container-structure-test",
)

bazel_dep(name = "buildifier_prebuilt", version = "8.0.3")

# Buf
#bazel_dep(name = "rules_buf", version = "0.3.0")
#
#buf = use_extension("@rules_buf//buf:extensions.bzl", "buf")
#buf.toolchains(version = "v1.34.0")
#use_repo(buf, "rules_buf_toolchains")
## /Buf

# OPA
#bazel_dep(name = "rules_opa", version = "0.11.0")
#git_override(
#    module_name = "rules_opa",
#    commit = "c81643c11a930519695a184204b9e2192f99d34c",
#    remote = "https://github.com/ticketmaster/rules_opa",
#)
## /OPA

# Kotlin
bazel_dep(name = "rules_kotlin", version = "2.1.3", repo_name = "io_bazel_rules_kotlin")

register_toolchains("//:kotlin_toolchain")
# /Kotlin

# images/containers
include("//bazel:containers.MODULE.bazel")

# Maven
bazel_dep(name = "rules_jvm_external", version = "6.7")

include("//bazel/maven:maven.MODULE.bazel")
# /Maven

# non-bzlmod things
http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_file = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_file")

http_jar = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_jar")

git_repository = use_repo_rule("@bazel_tools//tools/build_defs/repo:git.bzl", "git_repository")
